Fix handling too light & too dark colors

--- a/src/scss/blocks/palette.scss
+++ b/src/scss/blocks/palette.scss
@@ -59,3 +59,11 @@
     grid-column-start: 4;
   }
 }
+
+.palette__cell--no-color {
+  background-image: repeating-linear-gradient(-45deg,
+    transparent, transparent 5px,
+    var(--col-2-light) 0, var(--col-2-light) 6px
+  );
+  box-shadow: 0 0 0 2px #FFF inset;
+}
